[project]
name = "oura-mcp"
version = "0.2.0"
description = "Model Context Protocol (MCP) server for Oura Ring API - provides LLMs with access to sleep, activity, readiness, and health data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["httpx~=0.28", "python-dotenv~=1.2", "fastmcp~=2.13"]
keywords = [
    "oura",
    "mcp",
    "model-context-protocol",
    "health",
    "sleep",
    "fitness",
    "api",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
oura-mcp = "oura_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oura_mcp"]
